--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -3237,6 +3237,24 @@ body.layout-post {
   color: var(--stone);
 }
 
+/* Definition list - title/description pairs */
+.definition-list {
+  display: grid;
+  gap: var(--space-24);
+}
+
+.definition-item h3 {
+  color: var(--charcoal);
+  margin: 0 0 var(--space-8);
+  font-size: 1.125rem;
+}
+
+.definition-item p {
+  margin: 0;
+  color: var(--stone);
+  line-height: 1.7;
+}
+
 .text-stone {
   color: var(--stone);
 }
