Move shop links to tedxbreck.com.

--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -131,7 +131,7 @@
             <li role="menuitem"><a href="/volunteer/">Volunteer</a></li>
             <li role="menuitem"><a href="/sponsor/">Sponsor</a></li>
             <li role="menuitem"><a href="/donate-local-nonprofit-in-breckenridge/">Donate</a></li>
-            <li role="menuitem"><a href="https://tedxbreckenridge.com/shop" target="_blank" rel="noopener noreferrer">Shop</a></li>
+            <li role="menuitem"><a href="https://tedxbreck.com/shop">Shop</a></li>
           </ul>
         </li>
         <li class="nav-dropdown">
@@ -285,7 +285,7 @@
             <li><a href="/volunteer/">Volunteer</a></li>
             <li><a href="/sponsor/">Sponsor</a></li>
             <li><a href="/speak/">Apply to Speak</a></li>
-            <li><a href="https://tedxbreckenridge.com/shop" target="_blank" rel="noopener noreferrer">Shop</a></li>
+            <li><a href="https://tedxbreck.com/shop">Shop</a></li>
           </ul>
         </div>
         <div class="footer-column">
